# tourism-recommender-system

./: .gitignore  README.md  pyproject.toml  visualisation.py
classification/: app.py  classification.py  classification_text.py  draw_classification_results.py  draw_preselection_results.py  preselection.py  preselection2.py  utils.py
classification/jupyter/: all_knn.ipynb  all_knn_fa.ipynb  all_rf.ipynb  kmeans_knn.ipynb  kmeans_knn_fa.ipynb  kmeans_rf.ipynb  random_knn.ipynb  random_knn_fa.ipynb  random_rf.ipynb  score_knn.ipynb  silhouette_knn.ipynb  silhouette_knn_fa.ipynb  silhouette_rf.ipynb
classification/jupyter-preselection/: Untitled.ipynb  generated-data-r-2-n-3-3.ipynb  generated-data-r-2-n-6-4.ipynb  generated-data-r-2-n-8-2.ipynb
classification/jupyter-text/: all_knn.ipynb  all_knn_2.ipynb  all_rf.ipynb
classification/results/: all_knn.csv  all_knn_fa.csv  all_rf.csv  kmeans_knn.csv  kmeans_knn_fa.csv  kmeans_rf.csv  knn  random_knn.csv  random_knn_fa.csv  random_rf.csv  silhouette_knn.csv  silhouette_knn_fa.csv  silhouette_rf.csv
classification/results-text/: all_knn.csv  all_knn_2.csv  all_rf.csv
object-selection/: app.py  basic_factorization.py  basic_factorization_nimfa.py  basic_factorization_old.py  draw_results.py  load_data.py  model.model  object_selectinon2.py  object_selection.py  object_selection_generated_ratings.py  object_selection_nan.py  object_selection_old.py  object_selection_old_09.py  preselection.py  utils.py
object-selection/examples-text/: 02-bf.py  02-knn.py  02-random.py  02-rf.py  02-z-bf.py  02-z-knn.py  02-z-rf.py  (+9 more)
(+213 files in other folders)
