[tool.poetry]
name = "tourism-recommender-system"
version = "0.1.0"
description = ""
authors = ["tinaavbelj <tina.avbelj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "4.1.1.26"
pillow = "6.2.1"
google-api-python-client = "1.7.11"
unidecode = "1.1.1"
scipy = "1.4.1"
numpy = "1.16.0"
python-dotenv = "^0.10.3"
pandas = "^0.25.3"
matplotlib = "^3.1.2"
keras = "^2.3.1"
tensorflow = "2.1.0rc"
nltk = "^3.4.5"
gensim = "^3.8.1"
sklearn = "^0.0"
tqdm = "^4.41.1"
orange3 = "^3.24.1"
jupyterlab = "^2.0.1"
seaborn = "^0.10.0"
statsmodels = "^0.11.1"
scikit-fusion = "^0.2.1"
nimfa = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
